# Sudoku-Solver-AR

./: .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE-MIT  README.md  image.frag  image.vert  line.frag  line.vert  main.cpp
src/: AlignedVector.h  CachedPuzzleSolver.cpp  CachedPuzzleSolver.h  Camera.cpp  Camera.h  ComHelp.h  DeltaTimer.cpp  DeltaTimer.h  Game.cpp  Game.h  Geometry.cpp  Geometry.h  Image.h  ImageProcessing.cpp  ImageProcessing.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkData.cpp  NeuralNetworkData.h  Painter.cpp  Painter.h  PuzzleFinder.cpp  PuzzleFinder.h  ShaderProgram.cpp  ShaderProgram.h  Solve.cpp  Solve.h  main.cpp  sudoku_solver.cpp  sudoku_solver_ar.cpp  train_neural_network.cu
