CMAKE_MINIMUM_REQUIRED(VERSION 3.6.2)

FIND_PROGRAM(CCACHE_FOUND ccache)
IF(CCACHE_FOUND)
	SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ${CCACHE})
	SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_LINK ${CCACHE})
ENDIF()

SET(SOURCE_FILES
	src/Game.cpp
	src/main.cpp
	src/Solve.cpp
)

SET(CMAKE_CXX_FLAGS_RELEASE " -O2 -s")

PROJECT(sudoku_solver)
ADD_EXECUTABLE(sudoku_solver ${SOURCE_FILES})
